# poc-grpc

./: .gitignore  README.md
account_server/account_server/: account_server.py
protos/: tariff.proto
tariff_client/: README.md  client.py  pyproject.toml
tariff_client/bulb/tariff/: __init__.py
tariff_client/tariff_client/: client.py  metadata.py
tariff_client/tariff_client/bulb/tariff/v1/: __init__.py
tariff_server/: README.md  pyproject.toml  server.py  tariff.proto  tariff_pb2.py
tariff_server/bulb/tariff/: __init__.py
tariff_server/tariff_server/: metadata.py  server.py  tariff_pb2.py
tariff_server/tariff_server/bulb/tariff/v1/: __init__.py
tariff_server/testing/: conftest.py  test_server.py
tariff_server_google/: README.md  pyproject.toml
tariff_server_google/tariff_server_google/: server.py  tariff_pb2.py  tariff_pb2.pyi  tariff_pb2_grpc.py  tariff_pb2_grpc.pyi
typescript/: README.md
typescript/client/static_client/: README.md  package.json
typescript/client/static_client/src/: helpers.js  helpers.ts  index.js  index.ts
typescript/client/static_client_nice_grpc/: README.md  package.json  prettier.config.js  tsconfig.json
typescript/client/static_client_nice_grpc/src/: index.ts
typescript/server/: README.md  jest.config.js  package.json  tsconfig.json
typescript/server/src/: index.ts  middlewares.ts  server.ts
typescript/server/src/__tests__/: index.test.ts
